--- a/OnlineProductStore/Client/_Imports.razor
+++ b/OnlineProductStore/Client/_Imports.razor
@@ -9,8 +9,11 @@
 @using OnlineProductStore.Client
 @using OnlineProductStore.Client.Shared
 @using OnlineProductStore.Client.Shared.Base
+@using OnlineProductStore.Client.Shared.Layouts
+@using OnlineProductStore.Client.Shared.Navigations
 @using OnlineProductStore.Shared
 @using OnlineProductStore.Shared.Models;
+@using OnlineProductStore.Client.Services.Providers;
 @using MudBlazor;
 @using FluentValidation
 @using Blazored.LocalStorage
