--- a/OnlineProductStore/Client/Pages/Administrating/AddProduct.razor
+++ b/OnlineProductStore/Client/Pages/Administrating/AddProduct.razor
@@ -1,5 +1,12 @@
-﻿@page "/addproduct"
+﻿@page "/admin/addproduct"
 
+@using System.Text.Json
+@using System.Text
+@using System.Net
+@layout AdminPanelLayout
+
+@inject HttpClient _httpClient;
+@inject NavigationManager _navigationManager
 
 <div class="row">
     <div class="col-md-6 offset-3">
@@ -56,9 +63,16 @@
     private string? Message = string.Empty;
     private string? CssClass = string.Empty;
 
-    private void OnAddProduct()
+    private async Task OnAddProduct()
     {
-        Message = "";
+        var jsonPayload = JsonSerializer.Serialize(newProduct);
+        var requestContent = new StringContent(jsonPayload, Encoding.UTF8, "application/json");
+        var response = await _httpClient.PostAsync(APIEndpoints.AddNewProductEndpoint, requestContent);
+        
+        if (response.StatusCode == HttpStatusCode.OK)
+        {
+            _navigationManager.NavigateTo("/admin/products");
+        }
     }
 
 
@@ -69,12 +83,12 @@
         {
             uploadMessage = "";
             var format = "image/jpg";
-            var resizeImage = await e.File.RequestImageFileAsync(format, 300, 300);
-            var buffer = new byte[resizeImage.Size];
-            await resizeImage.OpenReadStream().ReadAsync(buffer);
-            var imageData = $"data:{format};base64,{Convert.ToBase64String(buffer)}";
+            var resizedImage = await e.File.RequestImageFileAsync(format, 300, 300);
+            var buffer = new byte[resizedImage.Size];
+            await resizedImage.OpenReadStream().ReadAsync(buffer);
+            //var imageData = $"data:{format};base64,{Convert.ToBase64String(buffer)}";
+            var imageData = Convert.ToBase64String(buffer);
             newProduct.Image = imageData;
-
         }
         else { uploadMessage = "Invalid file selected (only JPG file)"; }
     }
