--- a/OnlineProductStore/Client/Shared/Navigations/NavSideMenu.razor
+++ b/OnlineProductStore/Client/Shared/Navigations/NavSideMenu.razor
@@ -1,5 +1,5 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="/" Match="NavLinkMatch.All">Products</MudNavLink>
+    <MudNavLink Href="/" Match="NavLinkMatch.All">All Products</MudNavLink>
     <MudNavLink Href="/servers" Match="NavLinkMatch.Prefix">Servers</MudNavLink>
     <MudNavGroup Title="Settings" Expanded="true">
         <MudNavLink Href="/users" Match="NavLinkMatch.Prefix">Users</MudNavLink>
