add product list page

--- a/OnlineProductStore/Client/_Imports.razor
+++ b/OnlineProductStore/Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using OnlineProductStore.Client
 @using OnlineProductStore.Client.Shared
+
+@using OnlineProductStore.Shared
