--- a/OnlineProductStore/Client/Pages/Cart.razor
+++ b/OnlineProductStore/Client/Pages/Cart.razor
@@ -21,15 +21,19 @@ else
                 </div>
                 <div class="name">
                     <h5><a href="/product/@product.ProductId">@product.Title</a></h5>
+                    <input type="number" value="@product.Quantity" @onchange="((ChangeEventArgs e) => OnChangeQuantity(e, product))"
+                           class="form-control input-quantity"
+                           min="1"
+                           />
                     <button class="btn-delete" @onclick="@(() => RemoveProducFromCart(product.ProductId))">Delete</button>
                 </div>
-                <div class="cart-product-price">$@product.Price</div>
+                <div class="cart-product-price">$@product.Price x @product.Quantity = @(product.Price * product.Quantity)</div>
             </div>
             <hr />
         }
 
         <div class="cart-product-price">
-            Total (@_products.Count): $@_products.Sum(product => product.Price);
+            Total (@_products.Count): $@_products.Sum(product => product.Price * product.Quantity);
         </div>
     </div>
 }
@@ -61,5 +65,15 @@ else
         {
             _products = await _cartService.GetCartProductsAsync();
         }
+    }
+
+    private async Task OnChangeQuantity(ChangeEventArgs e, CartProductDTO product)
+    {
+        product.Quantity = int.Parse(e.Value.ToString());
+
+        if (product.Quantity < 1)
+            product.Quantity = 1;
+
+        await _cartService.UpdateQuantity(product);
     }
 }
